--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo build:web"
   },
+  "homepage": "http://huttyman.github.io/infinity_app",
   "dependencies": {
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
@@ -20,7 +23,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "~8.1.0",
+    "gh-pages": "^3.1.0"
   },
   "private": true
 }
