--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-collapsible": "^1.5.3",
     "react-native-table-component": "^1.2.1",
     "react-native-web": "~0.11.7"
