--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "homepage": "http://huttyman.github.io/infinity_app",
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "modal-react-native-web": "^0.2.0",
@@ -19,8 +20,15 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-collapsible": "^1.5.3",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.7",
+    "react-native-screens": "^2.9.0",
     "react-native-table-component": "^1.2.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.4.0",
+    "react-navigation-stack": "^2.8.2",
+    "react-navigation-tabs": "^2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
