--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "react-native-collapsible": "^1.5.3",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0",
