--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@expo/vector-icons": "^10.2.1",
     "@react-native-community/masked-view": "^0.1.10",
     "expo": "~38.0.8",
+    "expo-localization": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "i18n-js": "^3.7.1",
     "modal-react-native-web": "^0.2.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
