--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
+    "react-native-scalable-image": "^1.0.0",
     "react-native-screens": "^2.9.0",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^7.1.0",
